(01/10/09)
*** Console output for individual application invocation start and finish
    is no longer shown. The progress ticker now appears more often.
    This should give a better overview of run progress.

*** More parallelisation of execution, so that some constructs which should
    have always work now actually work. For example, mappers can take
    values as parameters which are not known "early" in a run, and will
    have their initialisation deferred until those parameters are ready.
    SwiftScript programs which previously worked should still work; and
    some programs which did not previously work should now work.

(11/11/08)
*** Swift 0.7 built from Swift SVN r2318 and cog SVN r2255

(08/15/08)
*** Swift 0.6 built from Swift SVN r2177 and cog SVN r2127

(06/06/08)
*** SWIFT_JOBDIR_PATH environment variable can be use in profiles (or
    anywhere else that will get it to the worker script) to cause the
    worker to copy input files to a possibly-worker-node-local working
    directory.

(04/24/08)
*** PATHPREFIX environment variable is prefixed to the path before execution
    in wrapper.sh; this variable can be set in profile entries using the usual
    environment variables

(04/14/08)
*** Constant interning - this reduces the number of datasets for local values
    created, especially when constants are used in loops.

(04/09/08)
*** Swift 0.5 built from Swift SVN r1783 and CoG SVN r1962

(03/26/08)
*** String literals now use \ as escape character - for example, use \"
    to insert a quote into a string literal. Where \ was previously used
    in a string literal, it is now necessary to escape it as \\

(03/25/08)

*** Logging performance improvement in wrapper.sh

(03/15/08)
*** Unused lrc field in site catalog removed.

*** url field in site catalog execute element is now optional.

(03/13/08)

*** Swift v0.4 built from Swift SVN r1718 and cog SVN r1934.

(03/03/08)
*** Stage out wrapper log files in a similar fashion to kickstart records.
